simple/test/features/errors/semantic/e1051_closure_signature_mismatch.spl
# E1051: Closure Signature Mismatch

Feature: E1051 - Closure Signature Mismatch
  As a Simple compiler
  I want to detect when closure signatures don't match expected signatures
  So that closure parameters and return types are correct

  Background:
    Given I have the Simple compiler

  Scenario: Closure with wrong parameter types
    When I compile:
      '''
      fn apply(f: fn(i32) -> i32, x: i32) -> i32:
        f(x)

      fn test():
        # Error: closure expects String, but should expect i32
        val result = apply(\s: s.length(), 5)
      '''
    Then I should see error E1051 at line 6
    And the error message should be "closure signature doesn't match expected signature"
    And the label should indicate "signature mismatch"
    And the help should suggest "check the closure parameters and return type"

  Scenario: Closure with wrong return type
    When I compile:
      '''
      fn apply(f: fn(i32) -> i32, x: i32) -> i32:
        f(x)

      fn test():
        # Error: returns String, but should return i32
        val result = apply(\x: "hello", 5)
      '''
    Then I should see error E1051

  Scenario: Valid closure signature
    When I compile:
      '''
      fn apply(f: fn(i32) -> i32, x: i32) -> i32:
        f(x)

      fn test():
        val result = apply(\x: x * 2, 5)  # OK
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn apply(f: fn(i32) -> i32, x: i32) -> i32:
        f(x)

      fn test():
        val result = apply(\s: s.length(), 5)
      '''
    Then I should see error E1051
    And the error message should contain "클로저 시그니처"
